# cyrano

./: .flake8  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
cyrano/: __main__.py  cyrano.py  cyrano_commands.py  cyrano_help.py
cyrano/common/: config.py  logmodule.py
cyrano/groups/group1/: _help.py  _module.py  commands.py  greeting_exception.py
cyrano/groups/optimize/: _help.py  _module.py  commands.py
cyrano/processes/: resume_optimization_process.py
cyrano/steps/: load_resume_step.py  optimize_resume_step.py  publish_resume_step.py
docs/: architecture.md  development.md  installation.md  recipes.md  usage.md
docs/.media/: cyrano.excalidraw
tests/: foo_tests.py  group1_tests.py
